# msc-thesis

./: .gitignore  Cargo.toml  Justfile  README.md  References.bib  ZoteroLib.bib  devenv.nix  full.md  preamble.sty
Mist/: .vale.ini  2023-06-09 – Notes.md  Abstract-syntax tree (AST).md  Abstract.md  Abstraction and modularity.md  Acknowledgements.md  Analysis function and abstract semantics.md  Appendix – Proof of leaves from folding.md  Appendix – The Mist Grammar.md  Appendix.md  Automated program verification tools.md  Automatic folding of isorecursive structures.md  Background.md  Case studies.md  Case study – Ascending sum.md  Case study – Reverse sort.md  Compilation stages.md  Compilation structure.md  Compiler improvements.md  Computing solutions.md  Conclusion.md  Concrete-syntax tree (CST).md  Contributions.md  Dafny comparison.md  Definition – Analysis assignment.md  Definition – Compatible.md  Definition – Cut.md  Definition – FIR Abstract Semantics.md  Definition – FIR Memory.md  Definition – FIR Program State.md  Definition – FIR Semantics inference rules.md  Definition – FIR Semantics.md  Definition – FIR Transition.md  Definition – FIR well-defined access rules.md  Definition – FIR.md  Definition – Foldable.md  Definition – Folding tree join and meet.md  Definition – Folding tree order.md  Definition – Folding tree top and bottom.md  Definition – Folding tree transition.md  (+134 more)
Mist/.obsidian/: app.json  appearance.json  bookmarks.json  graph.json  (+5 more)
case-studies/: reverse.ts
composer/: Cargo.toml
composer/src/: canvas.rs  main.rs
filters/: Cargo.toml
filters/src/: colors.rs  highlight.rs  main.rs
src/: 00-prelude.md  01-introduction.md  appendix.md  prelude.md  references.md
thesis-template-2015/: LukeThesis.sty  References.bib  Thesis.tex
(+69 files in other folders)
