[package]
name = "thesis-filters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino.workspace = true
miette.workspace = true
pandoc_types.workspace = true
serde.workspace = true
serde_json.workspace = true
ungrammar = "1.16.1"
mist-syntax = { path = "../../mist/crates/syntax", package = "mist-syntax" }
folding-tree = { path = "../../mist/crates/folding-tree", package = "folding-tree" }
syntect = "5.0.0"
heck.workspace = true
itertools.workspace = true
tempfile = "3.6.0"
